# zombie

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  reset_db  test.prof
arduino/touchpoint/: touchpoint.ino
docker/server/: Dockerfile
tests/: conftest.py
tests/test_server/: conftest.py  test_game.py  test_hypothesis.py  test_main.py  test_queries.py  utils.py
tests/test_server/test_hypothesis/: conftest.py  state_machine.py  test_game.py  test_player_setup.py
zombie/: loadtest.py  nfc.py
zombie/server/: __main__.py  admin.py  api.py  conf.py  config.py  db.py  entrypoint.py  game.py  logic.py  player.py  queries.py  wsgi.py
zombie/server/sql/: schema.sql
zombie/server/sql/queries/: activate_game.sql  deactivate_game.sql  drink_potion.sql  end_round.sql  get_active_game_id.sql  get_game_info.sql  get_player_in_active_game.sql  insert_game.sql  insert_player.sql  insert_touch.sql  list_games.sql  list_players_in_game.sql  list_potion_chugs.sql  list_rounds_in_game.sql  list_touches.sql  make_random_zombie.sql  start_game.sql  start_round.sql  toggle_zombie.sql
zombie/server/static/: dynamic_table.js  styles.css
zombie/server/templates/: admin_game.html  admin_home.html  base.html  player_home.html  scores_screen.html
zombie/touch_point/: __main__.py  gui.py  touch_point.py
