[tool.poetry]
name = "zombie"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.5"
flask = "^2.2.3"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
pg-docker = "^0.5.0"
types-psycopg2 = "^2.9.21.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
