[tool.poetry]
name = "zombie"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.5"
flask = "^2.2.3"
click = "^8.1.3"
psql2py-core = "^0.1.0"
environ-config = "^23.1.0"
pydantic = "^1.10.7"
types-flask = "^1.1.6"
pyserial = "^3.5"
requests = "^2.28.2"
pillow = "^9.5.0"
qrcode = {extras = ["pil"], version = "^7.4.2"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
pg-docker = "^0.11.0"
types-psycopg2 = "^2.9.21.9"
mypy = "^1.1.1"
hypothesis = "^6.71.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
